添加工厂模式

--- a/factory_patterns/CMakeLists.txt
+++ b/factory_patterns/CMakeLists.txt
@@ -4,4 +4,5 @@ project(factory_patterns)
 set(CMAKE_CXX_STANDARD 11)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
-add_executable(factory_patterns main.cpp)
+add_executable(simple_factory simple_factory.cpp)
+add_executable(factory factory.cpp)
