--- a/factory_patterns/CMakeLists.txt
+++ b/factory_patterns/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 11)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 add_executable(simple_factory simple_factory.cpp)
 add_executable(factory factory.cpp)
+add_executable(abstract_factory abstract_factory.cpp)
